@@ -1,3 +1,7 @@
+2005-02-21  Alan Modra  <amodra@bigpond.net.au>
+
+	* Makefile.in: Regenerate.
+
 2005-02-13  Maciej W. Rozycki  <macro@linux-mips.org>
 
 	* Makefile.am: Use CFLAGS_FOR_BUILD and LDFLAGS_FOR_BUILD for
